tests/fail/stacked_borrows/return_invalid_mut_tuple.stderr
error: Undefined Behavior: trying to retag from <TAG> for Unique permission at ALLOC[0x4], but that tag does not exist in the borrow stack for this location
  --> $DIR/return_invalid_mut_tuple.rs:LL:CC
   |
LL |     foo(&mut (1, 2)).0;
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     trying to retag from <TAG> for Unique permission at ALLOC[0x4], but that tag does not exist in the borrow stack for this location
   |     this error occurs as part of retag at ALLOC[0x4..0x8]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the Stacked Borrows rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <TAG> was created by a Unique retag at offsets [0x4..0x8]
  --> $DIR/return_invalid_mut_tuple.rs:LL:CC
   |
LL |     let ret = (unsafe { &mut (*xraw).1 },);
   |                         ^^^^^^^^^^^^^^
help: <TAG> was later invalidated at offsets [0x0..0x8] by a read access
  --> $DIR/return_invalid_mut_tuple.rs:LL:CC
   |
LL |     let _val = unsafe { *xraw }; // invalidate xref
   |                         ^^^^^
   = note: BACKTRACE:
   = note: inside `main` at $DIR/return_invalid_mut_tuple.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

